Changed first column in grid-template-columns of mariam-profile to max-content instead of auto to fix huge gap between pixel art profile picture and my name

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
 
 .mariam-profile {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: max-content auto;
 }
 .name-websites {
   display: flex;
